<resources>
    <string name="app_name">FinSafe</string>
    <string name="login_title_finsafe_banking">FinSafe Banking</string>
    <string name="login_et_username_std_or_prm">Username (std or prm)</string>
    <string name="login_et_password_1234">Password (1234)</string>
    <string name="login_btn_login">Login</string>
    <string name="main_app_title_finsafe_banking">FinSafe Banking</string>
    <string name="main_et_username_std_or_prm">Username (std or prm)</string>
    <string name="main_et_password_1234">Password (1234)</string>
    <string name="min_btn_login">Login</string>
    <string name="dashboard_recent_transactions">Recent Transactions</string>
    <string name="dashboard_add_dummy_transaction">Add Dummy Transaction</string>
    <string name="dashboard_set_low_balance_alert">Set Low Balance Alert</string>
    <string name="logout">Logout</string>
</resources>